# constraint-based-causal-discovery-suite

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE.md  README.md  TODO.md  journal.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
bnm/: .gitignore  CHANGELOG.md  README.md  __init__.py  _graph.py  adapter.py  compare.py  core.py  descriptive.py  markov_blanket.py  marks.py  protocol.py  pyproject.toml  sid.py  utils.py  viz.py
bnm/bnm/: __init__.py  adapter.py  comparative.py  compare.py  exceptions.py
bnm/docs/: audit.md  conf.py  index.md  tutorial.md
bnm/examples/: compare_algorithms.ipynb  compare_two_dags.ipynb  evaluate_single_dag.ipynb  sid.ipynb
bnm/scripts/: migrate_notebooks.py  notebook_parity_check.py
bnm/tests/: fixtures.py  fixtures_legacy.json  fixtures_legacy_v02_overrides.json  test_protocol.py  test_smoke.py
bnm/use cases/: compare algorithms.ipynb  compare two DAGs.ipynb  evaluate single DAG.ipynb
bnm/viz/: _graphviz.py  _mb_distribution.py
bnmetrics/: CHANGELOG.md  README.md  pyproject.toml
bnmetrics/bnmetrics/: __init__.py  _graph.py  adapter.py  comparative.py  compare.py  descriptive.py  exceptions.py  markov_blanket.py  marks.py  protocol.py  sid.py
bnmetrics/bnmetrics/viz/: __init__.py  _compare_models.py  _graphviz.py  _mb_distribution.py  _sid_matrix.py
bnmetrics/docs/: audit.md  conf.py  index.md  tutorial.md
bnmetrics/docs/design/: api_v0.py
bnmetrics/docs/explanation/: graphlike_protocol.md  markov_blanket.md  metrics_theory.md  sid_theory.md
bnmetrics/docs/howto/: compare_two_graphs.md  markov_blanket_visualisation.md  plotting_comparisons.md  working_with_cbcd_graphs.md  working_with_networkx.md
bnmetrics/docs/reference/: index.md
bnmetrics/examples/: compare_algorithms.ipynb  compare_two_dags.ipynb  evaluate_single_dag.ipynb  sid.ipynb
bnmetrics/scripts/: generate_legacy_snapshot.py
bnmetrics/scripts/legacy_0_1_x/: __init__.py  core.py  metrics.py  sid.py  viz.py
bnmetrics/tests/: fixtures.py  fixtures_legacy_v02_overrides.json  test_adapter.py  test_protocol.py  test_smoke.py
bnmetrics/tests/comparative/: test_comparative_handcomputed.py  test_comparative_legacy_parity.py
bnmetrics/tests/compare/: test_compare_facade.py  test_compare_perf.py
bnmetrics/tests/descriptive/: test_descriptive_handcomputed.py  test_descriptive_legacy_parity.py  test_markov_blanket_handcomputed.py
bnmetrics/tests/sid/: test_sid_handcomputed.py  test_sid_legacy_parity.py
bnmetrics/tests/viz/: test_analyse_mb.py  test_compare_models.py  test_viz_smoke.py  test_viz_v0_2_2.py
cbcd/: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  background.py  collider.py  pyproject.toml  recording.py  refinement.py  rules.py  skeleton.py
cbcd/algorithms/: __init__.py  _data.py
cbcd/cbcd/: __init__.py  background.py  collider.py  exceptions.py  skeleton.py
cbcd/citest/: fisherz.py  protocol.py
cbcd/docs/: README.md  conf.py  index.md  parity_report.md  tutorial.md
cbcd/graph/: __init__.py  dag.py  marks.py  pag.py
cbcd/tests/: fixtures.py  oracle_pag.py  test_edge_cases.py
cbcd/timeseries/: citest.py  graph.py  skeleton.py
citests/: .gitignore  .readthedocs.yaml  README.md  TODO.md  pyproject.toml
citests/citests/: __init__.py  exceptions.py
citests/docs/: Makefile
citests/examples/: run_all_continuous_tests.py  run_fisherz_spearman_synthetic.py  run_pc_with_citk.py
citests/notebooks/: fisherz.ipynb
citests/tests/: test_cbcd_compat.py  test_ci_smoke.py  test_pc_dispatch.py  test_validation.py
citk/: .gitignore  README.md  __init__.py  pyproject.toml
citk/citk/: __init__.py  exceptions.py
citk/examples/: run_all_continuous_tests.py  run_fisherz_spearman_synthetic.py  run_pc_with_citk.py
citk/tests/: __init__.py  base.py  conftest.py  contingency_table_tests.py  extended_tests.py  external_repo_tests.py  kernel_tests.py  ml_based_tests.py  nearest_neighbor_tests.py  partial_correlation_tests.py  pycomets_tests.py  r_based_tests.py  regression_tests.py  simple_tests.py  test_pc_dispatch.py  tigramite_based_tests.py
dagsampler/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
dagsampler/docs/: conf.py  index.md  tutorial.md
dagsampler/examples/: 01_quickstart.ipynb  02_templates_and_features.ipynb  README.md
dagsampler/tests/: test_ci_oracle.py  test_simulation_smoke.py
docs/: api.rst  api_reference.md  audit.md  audit_causal_learn.md  conf.py  config_examples.rst  formulations.rst  getting_strated.md  index.html  index.md  index.rst  journal.md  overview.rst  templates.rst  tutorial.md  usage.rst
docs/design/: api_v0.py
docs/explanation/: ci_test_taxonomy.md  graphlike_protocol.md  pc_theory.md  pcmci_theory.md  scm_formulation.md
docs/howto/: background_knowledge.md  choosing_a_ci_test.md  ci_oracle.md  compare_two_graphs.md  config_cookbook.md  index.md  plotting_comparisons.md  working_with_cbcd_graphs.md  working_with_networkx.md
docs/reference/: index.md
docs/source/: api_stability.md  changelog.md  conf.py  index.rst
docs/style_options/: README.md  style_a_narrative.md  style_b_terse.md  style_c_conversational.md  style_d_academic.md
examples/: run_fisherz_spearman_synthetic.py
notebooks/: fisherz.ipynb
parity/: README.md  _compare.py  run_all.py
parity/fci/: run.py
parity/pc/: run.py
parity/pcmci/: run.py
parity/suite/: README.md  pyproject.toml  run.py
scripts/: generate_legacy_snapshot.py  migrate_notebooks.py  notebook_parity_check.py
scripts/legacy_0_1_x/: core.py
src/dagsampler/: __init__.py  causal_sim.py
tests/: fixtures.py  fixtures_pag.py  oracle.py  test_adapter.py  test_background.py  test_cbcd_compat.py  test_ci_smoke.py  test_oracle.py  test_simulation_smoke.py  test_smoke.py  test_validation.py
tests/algorithms/: test_anytime_fci.py  test_fci_inputs.py  test_fci_oracle.py  test_pc_fisherz.py  test_pc_inputs.py
tests/citest/: test_cached.py
tests/collider/: test_sepset.py
use cases/: compare algorithms.ipynb  compare two DAGs.ipynb  evaluate single DAG.ipynb  sid.ipynb
(+210 files in other folders)
