[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bnmetrics"
version = "0.2.2"
authors = [
  { name="Pavel Averin" },
]
description = "Bayesian network metrics: SHD, F1, SID, and per-Markov-blanket comparisons over DAGs, CPDAGs, and PAGs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0,<3"]
networkx = ["networkx>=3.0,<4"]
viz = ["graphviz>=0.20", "plotly>=5.0,<7", "ipython>=8.0"]
docs = [
    "sphinx>=7",
    "furo>=2024.1",
    "myst-parser>=2",
    "sphinx-autoapi>=3",
    "linkify-it-py>=2",
]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.6",
    "mypy>=1.10",
    "ipython>=8",
    "networkx>=3",
    "pandas>=2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bnmetrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas.*", "networkx.*", "graphviz.*", "plotly.*", "IPython.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "scripts/legacy_0_1_x"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "kaleido>=1.3.0",
    "nbformat>=5.10.4",
    "pytest-cov>=7.1.0",
]
