[project]
name = "suite-parity"
version = "0.0.0"
description = "Suite-level integration harness chaining dagsampler → citests → cbcd → bnmetrics."
requires-python = ">=3.11"
# Path dependencies wire each sister package in editable mode so changes
# in any of them are picked up without re-installing.
dependencies = [
    "dagsampler",
    "citests",
    "cbcd",
    "bnmetrics",
]

[tool.uv]
# Runner project, not a distributable — uv must not try to build it.
package = false

[tool.uv.sources]
dagsampler = { path = "../../dagsampler", editable = true }
citests    = { path = "../../citests",    editable = true }
cbcd       = { path = "../../cbcd",       editable = true }
bnmetrics  = { path = "../../bnmetrics",  editable = true }
